Remove padding after last youtube short to prevent horizontal scroll [WEB-3301]

--- a/frontend/scss/pages/types/_t-videos.scss
+++ b/frontend/scss/pages/types/_t-videos.scss
@@ -303,10 +303,6 @@
       }
 
       .shorts-grid {
-          .m-listing:last-child {
-              margin-right: 56px;
-          }
-
           .m-listing__img {
               aspect-ratio: 2 / 3;
 
